[package]
name = "tidepoolsync"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "AGPL-3.0-only"
description = "Sync a Tidepool patient's data (pumpSettings + treatment history + glucose) to a Nightscout instance."

[lib]
name = "tidepoolsync"
path = "src/lib.rs"

[[bin]]
name = "tidepoolsync"
path = "src/main.rs"

[dependencies]
tidepool = { git = "https://github.com/E-Allie/tidepool-rs.git", rev = "5d41d88605ae6d6856f38fdbd10e6a85dd9ff630" }
nightscout = { git = "https://github.com/E-Allie/nightscout-rs.git", rev = "26d903b8aed1f43f9cdc1e58cf2e4ac7bae9f82d" }
anyhow = "1.0.102"
atomic-write-file = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
secrecy = { version = "0.10", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rust_decimal = { version = "1.41.0", features = ["serde-with-arbitrary-precision", "serde-with-str"] }
rayon = "1.12.0"
